--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "chart.js": "^4.4.3",
     "install": "^0.13.0",
     "mssql": "^10.0.2",
     "next": "14.2.2",
     "npm": "^10.5.2",
     "prisma": "^5.12.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "swiper": "^11.1.3"
   },
   "devDependencies": {
     "eslint": "^8",
