--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.12.1",
     "chart.js": "^4.4.3",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "mssql": "^10.0.2",
     "next": "14.2.2",
     "npm": "^10.5.2",
