--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "moment": "^2.30.1",
     "mssql": "^10.0.2",
     "next": "14.2.2",
     "npm": "^10.5.2",
