--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.12.1",
     "chart.js": "^4.4.3",
+    "cors": "^2.8.5",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
