--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="sqlserver://103.127.29.84;database=Testing_Scheme;integratedSecurity=true;trustServerCertificate=true;"
+NEXT_API_MERCHANT_ID = "PGTESTPAYUAT86"
+NEXT_API_MERCHANT_KEY = "96434309-7796-489d-8924-ab56988a6076"
+NEXT_API_MERCHANT_VERSION = "1"
