--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
