--- a/.env
+++ b/.env
@@ -6,5 +6,7 @@
 
 DATABASE_URL="sqlserver://103.127.29.84;database=Testing_Scheme;integratedSecurity=true;trustServerCertificate=true;"
 NEXT_API_MERCHANT_ID = "PGTESTPAYUAT86"
+# NEXT_API_MERCHANT_ID = "OUTQONLINE"
 NEXT_API_MERCHANT_KEY = "96434309-7796-489d-8924-ab56988a6076"
+# NEXT_API_MERCHANT_KEY = "bc3f1c2b-d3c6-451e-9908-b58c52273d78"
 NEXT_API_MERCHANT_VERSION = "1"
