--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ NEXT_API_MERCHANT_ID = "PGTESTPAYUAT86"
 NEXT_API_MERCHANT_KEY = "96434309-7796-489d-8924-ab56988a6076"
 # NEXT_API_MERCHANT_KEY = "bc3f1c2b-d3c6-451e-9908-b58c52273d78"
 NEXT_API_MERCHANT_VERSION = "1"
+DB_URL_1 = "sqlserver://103.127.29.84;database="
+DB_URL_2 = ";integratedSecurity=true;trustServerCertificate=true"
